--- a/index.html
+++ b/index.html
@@ -65,6 +65,31 @@
         <button class="btn">TELL ME MORE</button>
       </div>
     </header>
+    <section class="services">
+      <div class="container">
+        <div class="section-title">
+          <h1>SERVICES</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        <div class="wrapper services-wrapper">
+          <div>
+            <i class="fa-solid fa-basket-shopping"></i>
+            <h2>E-commerce</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vitae sem dolor. Vestibulum molestie pretium sem in faucibus. Curabitur ornare lorem a nulla euismod accumsan. Suspendisse auctor rutrum gravida. Vestibulum eget erat non turpis aliquet placerat nec vel sem. Sed tincidunt urna sit amet tempus euismod.</p>
+          </div>
+          <div>
+            <i class="fa-solid fa-laptop-code"></i>
+            <h2>Responsive Web</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vitae sem dolor. Vestibulum molestie pretium sem in faucibus. Curabitur ornare lorem a nulla euismod accumsan. Suspendisse auctor rutrum gravida. Vestibulum eget erat non turpis aliquet placerat nec vel sem. Sed tincidunt urna sit amet tempus euismod.</p>
+          </div>
+          <div>
+            <i class="fa-sharp fa-solid fa-lock"></i>
+            <h2>Web Security</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vitae sem dolor. Vestibulum molestie pretium sem in faucibus. Curabitur ornare lorem a nulla euismod accumsan. Suspendisse auctor rutrum gravida. Vestibulum eget erat non turpis aliquet placerat nec vel sem. Sed tincidunt urna sit amet tempus euismod.</p>
+          </div>
+        </div>
+      </div>
+  </section>
   </body>
 
 </html>
