--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Project 1</title>
+    <title>Miniprojekt</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -89,79 +89,86 @@
           </div>
         </div>
       </div>
-  </section>
-  <section class="portfolio">
-    <div class="container">
-      <div class="section-title">
-        <h1>OUR PORTFOLIO</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-      </div>
-      <div>
-        <div class="wrapper portfolio-wrapper">
-          <div>
-            <div class="image">
-              <img src="https://images.pexels.com/photos/13664663/pexels-photo-13664663.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+    </section>
+    <section class="portfolio">
+      <div class="container">
+        <div class="section-title">
+          <h1>OUR PORTFOLIO</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        <div>
+          <div class="wrapper portfolio-wrapper">
+            <div>
+              <div class="image">
+                <img src="https://images.pexels.com/photos/13664663/pexels-photo-13664663.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+              </div>
+              <div class="description">
+                <h2>vertigo</h2>
+                <p>Branding</p>
+              </div>
             </div>
-            <div class="description">
-              <h2>vertigo</h2>
-              <p>Branding</p>
-            </div>
-          </div>
 
-          <div>
-            <div class="image">
-              <img src="https://images.pexels.com/photos/14003122/pexels-photo-14003122.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+            <div>
+              <div class="image">
+                <img src="https://images.pexels.com/photos/14003122/pexels-photo-14003122.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+              </div>
+              <div class="description">
+                <h2>eloquence</h2>
+                <p>Print design</p>
+              </div>
             </div>
-            <div class="description">
-              <h2>eloquence</h2>
-              <p>Print design</p>
-            </div>
-          </div>
           
-          <div>
-            <div class="image">
-              <img src="https://images.pexels.com/photos/10182119/pexels-photo-10182119.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+            <div>
+              <div class="image">
+                <img src="https://images.pexels.com/photos/10182119/pexels-photo-10182119.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+              </div>
+              <div class="description">
+                <h2>lithe</h2>
+                <p>Print design</p>
+              </div>
             </div>
-            <div class="description">
-              <h2>lithe</h2>
-              <p>Print design</p>
+
+            <div>
+              <div class="image">
+                <img src="https://images.pexels.com/photos/14145239/pexels-photo-14145239.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+              </div>
+              <div class="description">
+                <h2>serendipithy</h2>
+                <p>Product Mock-up</p>
+              </div>
+            </div>
+
+            <div>
+              <div class="image">
+                <img src="https://images.pexels.com/photos/5540995/pexels-photo-5540995.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+              </div>
+              <div class="description">
+                <h2>serendipithy</h2>
+                <p>Web Design</p>
+              </div>
+            </div>
+
+            <div>
+              <div class="image">
+                <img src="https://images.pexels.com/photos/14146975/pexels-photo-14146975.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+              </div>
+              <div class="description">
+                <h2>serendipithy</h2>
+                <p>Branding</p>
+              </div>
             </div>
           </div>
-
-          <div>
-            <div class="image">
-              <img src="https://images.pexels.com/photos/14145239/pexels-photo-14145239.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
-            </div>
-            <div class="description">
-              <h2>serendipithy</h2>
-              <p>Product Mock-up</p>
-            </div>
-          </div>
-
-          <div>
-            <div class="image">
-              <img src="https://images.pexels.com/photos/5540995/pexels-photo-5540995.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
-            </div>
-            <div class="description">
-              <h2>serendipithy</h2>
-              <p>Web Design</p>
-            </div>
-          </div>
-
-          <div>
-            <div class="image">
-              <img src="https://images.pexels.com/photos/14146975/pexels-photo-14146975.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
-            </div>
-            <div class="description">
-              <h2>serendipithy</h2>
-              <p>Branding</p>
-            </div>
-          </div>
-
         </div>
       </div>
-    </div>
-</section>
+    </section>
+    <footer>
+      <p>© Copyright 2014 FreebiesXpress.com</p>
+      <ul>
+        <li><a href="#"><i class="fa-brands fa-twitter"></i>Twitter</a></li>
+        <li><a href="#"><i class="fa-brands fa-facebook-f"></i>Facebook</a></li>
+        <li><a href="#"><i class="fa-brands fa-pinterest-p"></i>Pinterest</a></li>
+        <li><a href="#"><i class="fa-brands fa-google-plus-g"></i>Google+</a></li>
+      </ul>
+    </footer>
   </body>
-
 </html>
