Add responsive web design

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="splash-inner">
         <h1 class="page-title">Welcome to our Studio!</h1>
         <h2 class="page-subtitle">It's nice to meet you</h2>
-        <button class="btn">TELL ME MORE</button>
+        <button class="btn" type="button">TELL ME MORE</button>
       </div>
     </header>
     <section class="services">
@@ -97,10 +97,10 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </div>
         <div>
-          <div class="wrapper portfolio-wrapper">
+          <div class="wrapper portfolio-wrapper" alt="">
             <div>
               <div class="image">
-                <img src="https://images.pexels.com/photos/13664663/pexels-photo-13664663.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+                <img src="https://images.pexels.com/photos/13664663/pexels-photo-13664663.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
               </div>
               <div class="description">
                 <h2>vertigo</h2>
@@ -110,17 +110,16 @@
 
             <div>
               <div class="image">
-                <img src="https://images.pexels.com/photos/14003122/pexels-photo-14003122.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+                <img src="https://images.pexels.com/photos/14003122/pexels-photo-14003122.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
               </div>
               <div class="description">
                 <h2>eloquence</h2>
                 <p>Print design</p>
               </div>
             </div>
-          
             <div>
               <div class="image">
-                <img src="https://images.pexels.com/photos/10182119/pexels-photo-10182119.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+                <img src="https://images.pexels.com/photos/10182119/pexels-photo-10182119.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
               </div>
               <div class="description">
                 <h2>lithe</h2>
@@ -130,7 +129,7 @@
 
             <div>
               <div class="image">
-                <img src="https://images.pexels.com/photos/14145239/pexels-photo-14145239.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+                <img src="https://images.pexels.com/photos/14145239/pexels-photo-14145239.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
               </div>
               <div class="description">
                 <h2>serendipithy</h2>
@@ -140,7 +139,7 @@
 
             <div>
               <div class="image">
-                <img src="https://images.pexels.com/photos/5540995/pexels-photo-5540995.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+                <img src="https://images.pexels.com/photos/5540995/pexels-photo-5540995.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
               </div>
               <div class="description">
                 <h2>serendipithy</h2>
@@ -150,7 +149,7 @@
 
             <div>
               <div class="image">
-                <img src="https://images.pexels.com/photos/14146975/pexels-photo-14146975.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+                <img src="https://images.pexels.com/photos/14146975/pexels-photo-14146975.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
               </div>
               <div class="description">
                 <h2>serendipithy</h2>
